<resources>
    <string name="app_name">MotionDetect</string>
    <string name="recognition_title">Recognition</string>
    <string name="recognition_status_title">Status</string>
    <string name="recognition_status_delayedstart">Starting recognition session in</string>
    <string name="recognition_status_waiting">Waiting for Wear OS device to respond</string>
    <string name="recognition_status_receiving_waiting">Waiting for the first action recognition result</string>
    <string name="recognition_status_receiving_recognizing">You are %s</string>
    <string name="recognition_status_disabled">Recognition client not running</string>
    <string name="recognition_status_hint">Recognition status</string>
    <string name="recognition_details_title">Session parameters</string>
    <string name="recognition_details_user_hand">Watch in hand</string>
    <string name="recognition_details_user_hand_left">Left hand</string>
    <string name="recognition_details_user_hand_right">Right hand</string>
    <string name="recognition_details_samplesperpacket">Samples per packet</string>
    <string name="recognition_details_samplesperpacket_hint">%d samples</string>
    <string name="recognition_details_delayedstart">Delayed start in seconds</string>
    <string name="recognition_details_delayedstart_hint">%d seconds</string>
    <string name="recognition_toast_start">Recognition started</string>
    <string name="recognition_toast_stop">Recognition stopped</string>
    <string name="recognition_toast_stop_wearos_no_response">Recognition stopped, no response from Wear OS device in %d seconds</string>
    <string name="recognition_toast_stop_recognition_error">Recognition stopped as an error occoured during recognition. See logcat for details.</string>
    <string name="recognition_toast_error_no_wearos">Please select a Wear OS device in Settings</string>
    <string name="recognition_toast_error_no_model">Please select a recognition model in Settings</string>
    <string name="recognition_toast_error_model_not_compatible">Selected model doesn\'t meet the required characteristics</string>
    <string name="recognition_toast_error_cant_exit">You can\'t leave Recognition while a session is running</string>
    <string name="recognition_service_notification_channel_name">Recognition service</string>
    <string name="recognition_service_notification_title">Recognition session running</string>
    <string name="recognition_service_notification_content_delayedstart">Starting capture session in %d seconds</string>
    <string name="recognition_service_notification_content_waiting">Waiting for Wear OS device to respond</string>
    <string name="recognition_service_notification_content_receiving_waiting">Waiting for the first action recognition result.</string>
    <string name="recognition_service_notification_content_receiving_recognizing">You are %s.</string>
    <string name="recognition_service_notification_button_stop">Stop</string>
    <string name="recognition_service_notification_button_open_app">Open app</string>
    <string name="recognition_service_notification_timeout_title">Recognition session stopped</string>
    <string name="recognition_service_notification_timeout_content">Recognition stopped after %d samples, no response from Wear OS device in %d seconds.</string>
    <string name="train_title">Train</string>
    <string name="train_status_title">Status</string>
    <string name="train_status_delayedstart">Starting capture session in</string>
    <string name="train_status_waiting">Waiting for Wear OS device to respond</string>
    <string name="train_status_receiving">Received %d samples (in %d packets) from Wear OS device</string>
    <string name="train_status_disabled">Train client not running</string>
    <string name="train_status_hint">Train status</string>
    <string name="train_action_title">Action to capture</string>
    <string name="train_details_title">Session parameters</string>
    <string name="train_details_alias">Session alias</string>
    <string name="train_details_stopafter">Stop after (#)</string>
    <string name="train_details_user">User name</string>
    <string name="train_details_user_hand">Watch in hand</string>
    <string name="train_details_user_hand_left">Left hand</string>
    <string name="train_details_user_hand_right">Right hand</string>
    <string name="train_details_samplesperpacket">Samples per packet</string>
    <string name="train_details_samplesperpacket_hint">%d samples</string>
    <string name="train_details_delayedstart">Delayed start in seconds</string>
    <string name="train_details_delayedstart_hint">%d seconds</string>
    <string name="train_toast_start">Training started</string>
    <string name="train_toast_stop">Training stopped</string>
    <string name="train_toast_stop_after">Training stopped after %d samples</string>
    <string name="train_toast_stop_wearos_no_response">Training stopped after %d samples, no response from Wear OS device in %d seconds</string>
    <string name="train_toast_error_no_alias">Please enter an alias for this session</string>
    <string name="train_toast_error_no_user">Please enter a user for this session</string>
    <string name="train_toast_error_no_wearos">Please select a Wear OS device in Settings</string>
    <string name="train_toast_error_cant_exit">You can\'t leave Train while a capture session is running</string>
    <string name="train_toast_error_creating_file">Error creating CSV file, training will not start</string>
    <string name="train_toast_error_session_already_exists">A session with alias %s already exists</string>
    <string name="train_service_notification_channel_name">Training service</string>
    <string name="train_service_notification_title">Training session running</string>
    <string name="train_service_notification_content_delayedstart">Starting capture session in %d seconds</string>
    <string name="train_service_notification_content_waiting">Waiting for Wear OS device to respond</string>
    <string name="train_service_notification_content_receiving">Received ~%d samples (in ~%d packets) from Wear OS device. Open app to see a more accurate count.</string>
    <string name="train_service_notification_button_stop">Stop</string>
    <string name="train_service_notification_button_open_app">Open app</string>
    <string name="train_service_notification_timeout_title">Training session stopped</string>
    <string name="train_service_notification_timeout_content">Training stopped after %d samples, no response from Wear OS device in %d seconds.</string>
    <string name="train_service_notification_stopaftersamples_title">Training session stopped</string>
    <string name="train_service_notification_stopaftersamples_content">Training session stopped after %d samples.</string>
    <string name="train_history_title">Train history</string>
    <string name="train_history_stats_total_samples">Total samples captured</string>
    <string name="train_history_stats_samples_count">%d (%.2f MB)</string>
    <string name="train_history_session">Session %s</string>
    <string name="train_history_session_count">%d samples</string>
    <string name="train_history_session_dialog_title">Actions for session %s</string>
    <string name="train_history_session_dialog_action_open">Open file</string>
    <string name="train_history_session_dialog_action_share">Share file</string>
    <string name="train_history_session_dialog_action_delete">Delete file</string>
    <string name="train_history_session_delete_title">Deleting session %s</string>
    <string name="train_history_session_delete_message">Are you sure you want to delete this session? This action cannot be undone.</string>
    <string name="train_history_session_delete_confirm">Delete</string>
    <string name="train_history_session_delete_cancel">Cancel</string>
    <string name="train_history_session_delete_success">Session deleted</string>
    <string name="train_history_session_delete_error">Error deleting session</string>
    <string name="train_history_delete_all">Delete all sessions</string>
    <string name="train_history_delete_all_title">You are about to delete all sessions</string>
    <string name="train_history_delete_all_message">Are you sure you want to delete all sessions? This action cannot be undone.</string>
    <string name="train_history_delete_all_confirm">Delete all</string>
    <string name="train_history_delete_all_cancel">Cancel</string>
    <string name="train_history_delete_all_success">All sessions deleted</string>
    <string name="train_history_delete_all_error">Error deleting all sessions</string>
    <string name="train_history_share_all_as_zip">Share all sessions as ZIP file</string>
    <string name="train_history_share_all_as_zip_message">Preparing ZIP file, please wait…</string>
    <string name="train_history_share_all_as_zip_cancel">Cancel</string>
    <string name="train_history_share_all_as_zip_error">Error creating ZIP file</string>
    <string name="train_history_share_all_as_zip_error_no_sessions">No sessions to share</string>
    <string name="train_history_toast_error_train_running">Train history is not available while a capture session is running</string>
    <string name="logs_title">Logs</string>
    <string name="settings_title">Settings</string>
    <string name="settings_weardevice_title">Wear OS device</string>
    <string name="settings_weardevice_select_connected">Connected devices</string>
    <string name="settings_weardevice_select_saved">Wear OS selection saved</string>
    <string name="settings_weardevice_select_clear">Clear selection</string>
    <string name="settings_weardevice_select_cleared">Wear OS selection cleared</string>
    <string name="settings_weardevice_select_test">Test connection</string>
    <string name="settings_weardevice_select_test_inprogress">Testing… (%d s)</string>
    <string name="settings_weardevice_select_test_success">Wear OS device replied in %d ms</string>
    <string name="settings_weardevice_select_test_failure">No response from Wear OS device after %d seconds</string>
    <string name="settings_recognitionmodel_title">Recognition model</string>
    <string name="settings_recognitionmodel_hint">In order to start a Recognition session, you need to select a .tflite model first. The model file you select will be copied into app internal storage. If you select a new model, the old one will be deleted.</string>
    <string name="settings_recognitionmodel_hint_2">Model must have and input shape of (100,6) and output shape of (None,5). This means the model must receive 100 groups of 6 coordinates (accelerometer and gyroscope X, Y and Z), and must output one of the 5 possible actions (0..4) as an integer.</string>
    <string name="settings_recognitionmodel_hint_3">Recognition service will not start until you select a model that meets the required characteristics.</string>
    <string name="settings_recognitionmodel_selected">Selected model</string>
    <string name="settings_recognitionmodel_selected_none">No model selected</string>
    <string name="settings_recognitionmodel_select_clear">Clear selection</string>
    <string name="settings_recognitionmodel_select_new">Select new model</string>
    <string name="settings_recognitionmodel_select_copying">Copying model to app storage, please wait…</string>
    <string name="settings_recognitionmodel_select_saved">Recognition model stored in app storage.</string>
    <string name="settings_recognitionmodel_select_cleared">Recognition model deleted from app storage.</string>
    <string name="base_action_standing">Standing</string>
    <string name="base_action_walking">Walking</string>
    <string name="base_action_running">Running</string>
    <string name="base_action_sitting">Sitting</string>
    <string name="base_action_lying">Lying</string>
</resources>