<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TrainFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/train_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/fab_total_space">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:allowUndo="false"
                    android:text="@string/train_status_title"
                    android:textColor="?android:attr/textColorLink"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/train_status_delayedstart_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/train_status_delayedstart"
                        android:textColor="?android:attr/textColorHint" />

                    <TextView
                        android:id="@+id/train_status_delayedstart_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="0"
                        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                        android:textColor="?android:attr/textColorLink" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/train_status_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/train_status_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/train_status_hint"
                        app:srcCompat="@drawable/ic_idle"
                        app:tint="?android:attr/textColorLink" />

                    <Space
                        android:layout_width="16dp"
                        android:layout_height="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/train_status_status_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/train_status_disabled" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/settings_weardevice_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:allowUndo="false"
                    android:text="@string/train_action_title"
                    android:textColor="?android:attr/textColorLink"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <RadioGroup
                        android:id="@+id/train_action"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checkedButton="@id/train_action_standing">

                        <RadioButton
                            android:id="@+id/train_action_standing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_action_standing"
                            android:drawablePadding="8dp"
                            android:drawableTint="?attr/colorAccent"
                            android:text="@string/base_action_standing" />

                        <RadioButton
                            android:id="@+id/train_action_walking"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_action_walking"
                            android:drawablePadding="8dp"
                            android:drawableTint="?attr/colorAccent"
                            android:text="@string/base_action_walking" />

                        <RadioButton
                            android:id="@+id/train_action_running"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_action_running"
                            android:drawablePadding="8dp"
                            android:drawableTint="?attr/colorAccent"
                            android:text="@string/base_action_running" />

                        <RadioButton
                            android:id="@+id/train_action_sitting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_action_sitting"
                            android:drawablePadding="8dp"
                            android:drawableTint="?attr/colorAccent"
                            android:text="@string/base_action_sitting" />

                        <RadioButton
                            android:id="@+id/train_action_lying"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_action_lying"
                            android:drawablePadding="8dp"
                            android:drawableTint="?attr/colorAccent"
                            android:text="@string/base_action_lying" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:allowUndo="false"
                    android:text="@string/train_details_title"
                    android:textColor="?android:attr/textColorLink"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/train_details_alias"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/train_details_alias"
                            android:inputType="text"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".05" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.45">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/train_details_stopafter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/train_details_stopafter"
                            android:inputType="number"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".45">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/train_details_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/train_details_user"
                            android:inputType="text"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".05" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.45"
                        android:hint="@string/train_details_user_hand">

                        <AutoCompleteTextView
                            android:id="@+id/settings_weardevice_select"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:focusable="false"
                            android:clickable="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/train_details_samplesperpacket" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <com.google.android.material.slider.Slider
                            android:id="@+id/train_details_samplesperpacket_slider"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.80"
                            android:stepSize="1"
                            android:valueFrom="0"
                            android:valueTo="3" />

                        <TextView
                            android:id="@+id/train_details_samplesperpacket_hint"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.20"
                            android:text="@string/train_details_samplesperpacket_hint"
                            android:textAlignment="viewEnd"
                            android:textColor="?android:attr/textColorHint"
                            android:textStyle="italic"
                            tools:ignore="TextContrastCheck" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/train_details_delayedstart" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <com.google.android.material.slider.Slider
                            android:id="@+id/train_details_delayedstart_slider"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.80"
                            android:stepSize="1"
                            android:valueFrom="5"
                            android:valueTo="20" />

                        <TextView
                            android:id="@+id/train_details_delayedstart_hint"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.20"
                            android:text="@string/train_details_delayedstart_hint"
                            android:textAlignment="viewEnd"
                            android:textColor="?android:attr/textColorHint"
                            android:textStyle="italic"
                            tools:ignore="TextContrastCheck" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/train_toggle_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="TODO"
        android:src="@drawable/ic_start"
        app:layout_anchor="@id/train_scrollview"
        app:layout_anchorGravity="bottom|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>